--- a/src/app/data-bing/data-bing.component.html
+++ b/src/app/data-bing/data-bing.component.html
@@ -4,3 +4,15 @@
 <p>{{idade > 29}}</p>
 <p>Quanto é {{idade}} + 1?</p>
 <p>{{idade+1}}</p>
+
+<hr> 
+
+<h1>Property binding</h1>
+
+<button  [disabled]="btnDisable">Botão</button>
+<button  [disabled]="!btnDisable">Botão</button>
+
+<br>
+<img [src]="urlImagem" [alt]="dsImagem" [name]="dsImagem"/>
+
+<hr>
