NgClass/NgStyle/NgModel

--- a/src/app/diretivas-estruturais/diretivas-estruturais.component.html
+++ b/src/app/diretivas-estruturais/diretivas-estruturais.component.html
@@ -23,6 +23,9 @@
 <button (click)="clickAdd()">Add</button>
 
 <hr>
+
+<h2>NGSWITCH</h2>
+
 <input type="text"  [(ngModel)]="nome">
 <div [ngSwitch]="nome">
 <p *ngSwitchCase="'Consta'">Constantino</p>
