--- a/src/app/diretivas-atributos/diretivas-atributos.component.html
+++ b/src/app/diretivas-atributos/diretivas-atributos.component.html
@@ -1,4 +1,7 @@
-<!-- <h1>Diretivas de Atributos</h1>
+<ng-content select="h1"></ng-content>
+
+
+ <h1>Diretivas de Atributos</h1>
 <div *ngIf="nome == 'Consta'">
     <p [ngClass]="{concluido: verifica, pendente:!verifica}">ngClass</p>
     <hr>
@@ -9,8 +12,10 @@
 <input type="text" [(ngModel)]="nome">
 <button (click)="clicar()">Salvar</button>
 
-<li *ngFor="let item of list">{{item.nome}}</li> -->
+<li *ngFor="let item of list">{{item.nome}}</li> 
 
 <ng-template ngFor let-item [ngForOf]="list">
  <p> {{item.nome}}</p>
 </ng-template>
+
+<ng-content select="h3"></ng-content>
